--- a/s32g_gnss_launch/config/gnss.yaml
+++ b/s32g_gnss_launch/config/gnss.yaml
@@ -75,3 +75,13 @@
 
       publish:
         all: false
+
+
+/**:
+  gnss_eval:
+    ros__parameters:
+      ground_truth:
+        latitude: 35.97237383
+        longitude: 128.93865707
+        altitude: 0.0
+      log_enable: true
